# miszen

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
config/: event_mappings.json
scripts/: test_connection.py
src/adapters/: __init__.py  mis_connector.py  zen_mcp_adapter.py
src/commands/: __init__.py  chat_integration.py
src/core/: __init__.py  config.py  mcp_protocol.py
src/events/: __init__.py  event_handler.py  event_types.py
